--- a/dashboard.html
+++ b/dashboard.html
@@ -1,23 +1,245 @@
-<!-- Contoh struktur dasar dashboard -->
-<div class="admin-dashboard">
-  <div class="stats-cards">
-    <div class="stat-card">
-      <h3>Total Pesanan</h3>
-      <p class="stat-value">128</p>
-      <p class="stat-change positive">+12% dari bulan lalu</p>
+<!DOCTYPE html>
+<html lang="id">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Dashboard Admin - Flowers Shop</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+    <link rel="stylesheet" href="css/admin.css" />
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  </head>
+  <body>
+    <div class="admin-wrapper">
+      <!-- Sidebar -->
+      <aside class="admin-sidebar">
+        <div class="sidebar-header">
+          <a href="dashboard.html" class="sidebar-brand"
+            >Flowers <span>Shop</span></a
+          >
+          <div class="sidebar-toggle" id="sidebar-toggle">
+            <i class="bi bi-list"></i>
+          </div>
+        </div>
+
+        <ul class="sidebar-menu">
+          <li class="sidebar-item">
+            <a href="dashboard.html" class="sidebar-link active">
+              <i class="bi bi-speedometer2"></i>
+              <span>Dashboard</span>
+            </a>
+          </li>
+          <li class="sidebar-item">
+            <a href="products/index.html" class="sidebar-link">
+              <i class="bi bi-box"></i>
+              <span>Produk</span>
+            </a>
+          </li>
+          <li class="sidebar-item">
+            <a href="orders/index.html" class="sidebar-link">
+              <i class="bi bi-cart3"></i>
+              <span>Pesanan</span>
+            </a>
+          </li>
+          <li class="sidebar-item">
+            <a href="customers/index.html" class="sidebar-link">
+              <i class="bi bi-people"></i>
+              <span>Pelanggan</span>
+            </a>
+          </li>
+          <li class="sidebar-item">
+            <a href="reports/index.html" class="sidebar-link">
+              <i class="bi bi-bar-chart"></i>
+              <span>Laporan</span>
+            </a>
+          </li>
+          <li class="sidebar-item">
+            <a href="settings/index.html" class="sidebar-link">
+              <i class="bi bi-gear"></i>
+              <span>Pengaturan</span>
+            </a>
+          </li>
+          <li class="sidebar-item mt-auto">
+            <a href="#" id="logout-button" class="sidebar-link">
+              <i class="bi bi-box-arrow-right"></i>
+              <span>Logout</span>
+            </a>
+          </li>
+        </ul>
+      </aside>
+
+      <!-- Main Content -->
+      <div class="admin-content">
+        <header class="admin-header">
+          <h1 class="h4 mb-0">Dashboard</h1>
+
+          <div class="header-actions">
+            <div class="dropdown">
+              <button
+                class="btn btn-light dropdown-toggle"
+                type="button"
+                id="notificationDropdown"
+                data-bs-toggle="dropdown"
+              >
+                <i class="bi bi-bell"></i>
+                <span class="badge bg-danger">5</span>
+              </button>
+              <ul class="dropdown-menu dropdown-menu-end">
+                <li>
+                  <a class="dropdown-item" href="#">Pesanan baru #FS2505...</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">Stok Bunga Mawar rendah</a>
+                </li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a class="dropdown-item" href="#">Lihat semua notifikasi</a>
+                </li>
+              </ul>
+            </div>
+
+            <div class="dropdown ms-3">
+              <button
+                class="btn btn-light dropdown-toggle"
+                type="button"
+                id="adminDropdown"
+                data-bs-toggle="dropdown"
+              >
+                <i class="bi bi-person-circle"></i>
+                <span>Admin</span>
+              </button>
+              <ul class="dropdown-menu dropdown-menu-end">
+                <li><a class="dropdown-item" href="#">Profil</a></li>
+                <li><a class="dropdown-item" href="#">Pengaturan</a></li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a class="dropdown-item" href="#" id="header-logout"
+                    >Logout</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+        </header>
+
+        <!-- Dashboard content -->
+        <div class="admin-dashboard">
+          <!-- Stats Cards -->
+          <div class="row">
+            <div class="col-xl-3 col-md-6 mb-4">
+              <div class="card border-left-primary h-100 py-2">
+                <div class="card-body">
+                  <div class="row no-gutters align-items-center">
+                    <div class="col mr-2">
+                      <div
+                        class="text-xs font-weight-bold text-primary text-uppercase mb-1"
+                      >
+                        Total Pesanan
+                      </div>
+                      <div class="h5 mb-0 font-weight-bold text-gray-800">
+                        128
+                      </div>
+                      <div class="small text-success">
+                        <i class="bi bi-arrow-up"></i> +12% dari bulan lalu
+                      </div>
+                    </div>
+                    <div class="col-auto">
+                      <i
+                        class="bi bi-cart3 fa-2x text-gray-300"
+                        style="font-size: 2rem; color: #ddd"
+                      ></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Tambahkan 3 card statistik lainnya seperti Total Penjualan, Produk Terjual, Pelanggan Baru -->
+          </div>
+
+          <!-- Charts -->
+          <div class="row">
+            <div class="col-xl-8 col-lg-7">
+              <div class="card">
+                <div class="card-header">
+                  <h5 class="mb-0">Penjualan Bulanan</h5>
+                </div>
+                <div class="card-body">
+                  <canvas id="salesChart" style="height: 300px"></canvas>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-xl-4 col-lg-5">
+              <div class="card">
+                <div class="card-header">
+                  <h5 class="mb-0">Produk Terlaris</h5>
+                </div>
+                <div class="card-body">
+                  <canvas id="productsChart" style="height: 300px"></canvas>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Recent Orders -->
+          <div class="card mt-4">
+            <div class="card-header">
+              <h5 class="mb-0">Pesanan Terbaru</h5>
+            </div>
+            <div class="card-body">
+              <div class="table-responsive">
+                <table class="table table-bordered">
+                  <thead>
+                    <tr>
+                      <th>ID Pesanan</th>
+                      <th>Tanggal</th>
+                      <th>Pelanggan</th>
+                      <th>Total</th>
+                      <th>Status</th>
+                      <th>Aksi</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <!-- Data pesanan terbaru -->
+                    <tr>
+                      <td>FS2505001</td>
+                      <td>12 Mei 2025, 14:30</td>
+                      <td>Anita Susanti</td>
+                      <td>Rp 215.000</td>
+                      <td>
+                        <span class="badge bg-warning"
+                          >Menunggu Pembayaran</span
+                        >
+                      </td>
+                      <td>
+                        <a
+                          href="orders/index.html"
+                          class="btn btn-sm btn-primary"
+                          >Detail</a
+                        >
+                      </td>
+                    </tr>
+                    <!-- Tambahkan beberapa pesanan lainnya sebagai contoh -->
+                  </tbody>
+                </table>
+              </div>
+              <a href="orders/index.html" class="btn btn-sm btn-primary"
+                >Lihat Semua Pesanan</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    <!-- Kartu statistik lainnya -->
-  </div>
 
-  <div class="sales-chart">
-    <h3>Penjualan Bulan Ini</h3>
-    <canvas id="salesChart"></canvas>
-  </div>
-
-  <div class="recent-orders">
-    <h3>Pesanan Terbaru</h3>
-    <table>
-      <!-- Tabel pesanan terbaru -->
-    </table>
-  </div>
-</div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/adminPanel.js"></script>
+  </body>
+</html>
