--- a/login.html
+++ b/login.html
@@ -1,13 +1,104 @@
-<!-- Contoh struktur dasar form login admin -->
-<form id="admin-login-form">
-  <h2>Login Admin</h2>
-  <div class="form-group">
-    <label for="admin-username">Username</label>
-    <input type="text" id="admin-username" name="username" required />
-  </div>
-  <div class="form-group">
-    <label for="admin-password">Password</label>
-    <input type="password" id="admin-password" name="password" required />
-  </div>
-  <button type="submit" class="btn-submit">Login</button>
-</form>
+<!DOCTYPE html>
+<html lang="id">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Admin Login - Flowers Shop</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="css/admin.css" />
+    <style>
+      body {
+        background-color: var(--admin-light, #f8f9fc);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-height: 100vh;
+      }
+
+      .login-container {
+        width: 100%;
+        max-width: 400px;
+        padding: 2rem;
+        background-color: white;
+        border-radius: 10px;
+        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+      }
+
+      .login-logo {
+        text-align: center;
+        margin-bottom: 2rem;
+      }
+
+      .login-logo h2 {
+        color: var(--primary, #89aaaf);
+        font-weight: 600;
+      }
+
+      .login-logo h2 span {
+        color: var(--fonts, #36486b);
+      }
+    </style>
+  </head>
+  <body>
+    <div class="login-container">
+      <div class="login-logo">
+        <h2>Flowers <span>Shop</span></h2>
+        <p>Admin Dashboard</p>
+      </div>
+
+      <form id="admin-login-form">
+        <div class="mb-3">
+          <label for="admin-username" class="form-label">Username</label>
+          <div class="input-group">
+            <span class="input-group-text"><i class="bi bi-person"></i></span>
+            <input
+              type="text"
+              class="form-control"
+              id="admin-username"
+              name="username"
+              required
+            />
+          </div>
+        </div>
+
+        <div class="mb-3">
+          <label for="admin-password" class="form-label">Password</label>
+          <div class="input-group">
+            <span class="input-group-text"><i class="bi bi-lock"></i></span>
+            <input
+              type="password"
+              class="form-control"
+              id="admin-password"
+              name="password"
+              required
+            />
+          </div>
+        </div>
+
+        <div class="mb-3 form-check">
+          <input type="checkbox" class="form-check-input" id="remember-me" />
+          <label class="form-check-label" for="remember-me">Ingat saya</label>
+        </div>
+
+        <button type="submit" class="btn btn-primary w-100">Login</button>
+
+        <div class="mt-3 text-center">
+          <a href="../index.html" class="text-muted">
+            <i class="bi bi-arrow-left"></i> Kembali ke Website
+          </a>
+        </div>
+      </form>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/adminPanel.js"></script>
+  </body>
+</html>
