--- a/dashboard.html
+++ b/dashboard.html
@@ -5,25 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dashboard Admin - Flowers Shop</title>
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="css/admin.css" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
   <body>
     <div class="admin-wrapper">
-      <!-- Sidebar -->
-      <aside class="admin-sidebar">
+      <aside class="sidebar">
         <div class="sidebar-header">
           <a href="dashboard.html" class="sidebar-brand"
             >Flowers <span>Shop</span></a
           >
-          <div class="sidebar-toggle" id="sidebar-toggle">
+          <div class="sidebar-toggle" id="sidebarToggle">
             <i class="bi bi-list"></i>
           </div>
         </div>
@@ -36,37 +35,43 @@
             </a>
           </li>
           <li class="sidebar-item">
-            <a href="products/index.html" class="sidebar-link">
-              <i class="bi bi-box"></i>
+            <a href="products.html" class="sidebar-link">
+              <i class="bi bi-box-seam"></i>
               <span>Produk</span>
             </a>
           </li>
           <li class="sidebar-item">
-            <a href="orders/index.html" class="sidebar-link">
+            <a href="orders.html" class="sidebar-link">
               <i class="bi bi-cart3"></i>
               <span>Pesanan</span>
             </a>
           </li>
           <li class="sidebar-item">
-            <a href="customers/index.html" class="sidebar-link">
+            <a href="customers.html" class="sidebar-link">
               <i class="bi bi-people"></i>
               <span>Pelanggan</span>
             </a>
           </li>
           <li class="sidebar-item">
-            <a href="reports/index.html" class="sidebar-link">
+            <a href="testimonials.html" class="sidebar-link">
+              <i class="bi bi-chat-left-text"></i>
+              <span>Testimoni</span>
+            </a>
+          </li>
+          <li class="sidebar-item">
+            <a href="reports.html" class="sidebar-link">
               <i class="bi bi-bar-chart"></i>
               <span>Laporan</span>
             </a>
           </li>
           <li class="sidebar-item">
-            <a href="settings/index.html" class="sidebar-link">
+            <a href="settings.html" class="sidebar-link">
               <i class="bi bi-gear"></i>
               <span>Pengaturan</span>
             </a>
           </li>
-          <li class="sidebar-item mt-auto">
-            <a href="#" id="logout-button" class="sidebar-link">
+          <li class="sidebar-item">
+            <a href="#" class="sidebar-link logout-btn">
               <i class="bi bi-box-arrow-right"></i>
               <span>Logout</span>
             </a>
@@ -74,172 +79,186 @@
         </ul>
       </aside>
 
-      <!-- Main Content -->
-      <div class="admin-content">
-        <header class="admin-header">
-          <h1 class="h4 mb-0">Dashboard</h1>
+      <div class="main-content">
+        <header class="header">
+          <h1>Dashboard</h1>
 
           <div class="header-actions">
-            <div class="dropdown">
-              <button
-                class="btn btn-light dropdown-toggle"
-                type="button"
-                id="notificationDropdown"
-                data-bs-toggle="dropdown"
-              >
-                <i class="bi bi-bell"></i>
-                <span class="badge bg-danger">5</span>
-              </button>
-              <ul class="dropdown-menu dropdown-menu-end">
-                <li>
-                  <a class="dropdown-item" href="#">Pesanan baru #FS2505...</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#">Stok Bunga Mawar rendah</a>
-                </li>
-                <li><hr class="dropdown-divider" /></li>
-                <li>
-                  <a class="dropdown-item" href="#">Lihat semua notifikasi</a>
-                </li>
-              </ul>
+            <div class="notification-icon">
+              <i class="bi bi-bell fs-4"></i>
+              <span class="notification-badge">3</span>
             </div>
 
-            <div class="dropdown ms-3">
-              <button
-                class="btn btn-light dropdown-toggle"
-                type="button"
-                id="adminDropdown"
-                data-bs-toggle="dropdown"
-              >
-                <i class="bi bi-person-circle"></i>
-                <span>Admin</span>
-              </button>
-              <ul class="dropdown-menu dropdown-menu-end">
-                <li><a class="dropdown-item" href="#">Profil</a></li>
-                <li><a class="dropdown-item" href="#">Pengaturan</a></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li>
-                  <a class="dropdown-item" href="#" id="header-logout"
-                    >Logout</a
-                  >
-                </li>
-              </ul>
+            <div class="admin-profile">
+              <img src="img/admin-avatar.jpg" alt="Admin" />
+              <span>Admin</span>
             </div>
           </div>
         </header>
 
-        <!-- Dashboard content -->
-        <div class="admin-dashboard">
-          <!-- Stats Cards -->
-          <div class="row">
-            <div class="col-xl-3 col-md-6 mb-4">
-              <div class="card border-left-primary h-100 py-2">
-                <div class="card-body">
-                  <div class="row no-gutters align-items-center">
-                    <div class="col mr-2">
-                      <div
-                        class="text-xs font-weight-bold text-primary text-uppercase mb-1"
-                      >
-                        Total Pesanan
-                      </div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800">
-                        128
-                      </div>
-                      <div class="small text-success">
-                        <i class="bi bi-arrow-up"></i> +12% dari bulan lalu
-                      </div>
-                    </div>
-                    <div class="col-auto">
-                      <i
-                        class="bi bi-cart3 fa-2x text-gray-300"
-                        style="font-size: 2rem; color: #ddd"
-                      ></i>
-                    </div>
-                  </div>
+        <div class="row">
+          <div class="col-xl-3 col-md-6 mb-4">
+            <div class="stat-card primary">
+              <div>
+                <div class="stat-value">128</div>
+                <div class="stat-label">Total Pesanan</div>
+                <div class="stat-trend up">
+                  <i class="bi bi-arrow-up"></i> 12% dari bulan lalu
                 </div>
               </div>
-            </div>
-
-            <!-- Tambahkan 3 card statistik lainnya seperti Total Penjualan, Produk Terjual, Pelanggan Baru -->
-          </div>
-
-          <!-- Charts -->
-          <div class="row">
-            <div class="col-xl-8 col-lg-7">
-              <div class="card">
-                <div class="card-header">
-                  <h5 class="mb-0">Penjualan Bulanan</h5>
-                </div>
-                <div class="card-body">
-                  <canvas id="salesChart" style="height: 300px"></canvas>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-xl-4 col-lg-5">
-              <div class="card">
-                <div class="card-header">
-                  <h5 class="mb-0">Produk Terlaris</h5>
-                </div>
-                <div class="card-body">
-                  <canvas id="productsChart" style="height: 300px"></canvas>
-                </div>
+              <div class="icon">
+                <i class="bi bi-cart3"></i>
               </div>
             </div>
           </div>
 
-          <!-- Recent Orders -->
-          <div class="card mt-4">
-            <div class="card-header">
-              <h5 class="mb-0">Pesanan Terbaru</h5>
-            </div>
-            <div class="card-body">
-              <div class="table-responsive">
-                <table class="table table-bordered">
-                  <thead>
-                    <tr>
-                      <th>ID Pesanan</th>
-                      <th>Tanggal</th>
-                      <th>Pelanggan</th>
-                      <th>Total</th>
-                      <th>Status</th>
-                      <th>Aksi</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <!-- Data pesanan terbaru -->
-                    <tr>
-                      <td>FS2505001</td>
-                      <td>12 Mei 2025, 14:30</td>
-                      <td>Anita Susanti</td>
-                      <td>Rp 215.000</td>
-                      <td>
-                        <span class="badge bg-warning"
-                          >Menunggu Pembayaran</span
-                        >
-                      </td>
-                      <td>
-                        <a
-                          href="orders/index.html"
-                          class="btn btn-sm btn-primary"
-                          >Detail</a
-                        >
-                      </td>
-                    </tr>
-                    <!-- Tambahkan beberapa pesanan lainnya sebagai contoh -->
-                  </tbody>
-                </table>
+          <div class="col-xl-3 col-md-6 mb-4">
+            <div class="stat-card success">
+              <div>
+                <div class="stat-value">Rp 8.5jt</div>
+                <div class="stat-label">Total Penjualan</div>
+                <div class="stat-trend up">
+                  <i class="bi bi-arrow-up"></i> 8% dari bulan lalu
+                </div>
               </div>
-              <a href="orders/index.html" class="btn btn-sm btn-primary"
-                >Lihat Semua Pesanan</a
-              >
+              <div class="icon">
+                <i class="bi bi-currency-dollar"></i>
+              </div>
             </div>
+          </div>
+
+          <div class="col-xl-3 col-md-6 mb-4">
+            <div class="stat-card warning">
+              <div>
+                <div class="stat-value">256</div>
+                <div class="stat-label">Produk Terjual</div>
+                <div class="stat-trend up">
+                  <i class="bi bi-arrow-up"></i> 5% dari bulan lalu
+                </div>
+              </div>
+              <div class="icon">
+                <i class="bi bi-box-seam"></i>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-xl-3 col-md-6 mb-4">
+            <div class="stat-card info">
+              <div>
+                <div class="stat-value">35</div>
+                <div class="stat-label">Pelanggan Baru</div>
+                <div class="stat-trend down">
+                  <i class="bi bi-arrow-down"></i> 3% dari bulan lalu
+                </div>
+              </div>
+              <div class="icon">
+                <i class="bi bi-people"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-8">
+            <div class="chart-container">
+              <div class="chart-header">
+                <h2 class="chart-title">Penjualan Bulanan</h2>
+                <div class="chart-actions">
+                  <button class="btn btn-sm btn-outline-secondary">
+                    Hari Ini
+                  </button>
+                  <button class="btn btn-sm btn-outline-secondary">
+                    Minggu Ini
+                  </button>
+                  <button class="btn btn-sm btn-outline-secondary active">
+                    Bulan Ini
+                  </button>
+                  <button class="btn btn-sm btn-outline-secondary">
+                    Tahun Ini
+                  </button>
+                </div>
+              </div>
+              <div>
+                <canvas id="salesChart" height="300"></canvas>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="chart-container">
+              <div class="chart-header">
+                <h2 class="chart-title">Produk Terlaris</h2>
+              </div>
+              <div>
+                <canvas id="productsChart" height="300"></canvas>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="data-table">
+          <div class="table-header">
+            <h2 class="table-title">Pesanan Terbaru</h2>
+            <div class="table-actions">
+              <button class="btn btn-primary btn-sm">Lihat Semua</button>
+            </div>
+          </div>
+
+          <div class="table-responsive">
+            <table>
+              <thead>
+                <tr>
+                  <th>ID Pesanan</th>
+                  <th>Tanggal</th>
+                  <th>Pelanggan</th>
+                  <th>Total</th>
+                  <th>Status</th>
+                  <th>Aksi</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>#FS2505001</td>
+                  <td>12 Mei 2025</td>
+                  <td>Anita Susanti</td>
+                  <td>Rp 215.000</td>
+                  <td>
+                    <span class="status-badge pending"
+                      >Menunggu Pembayaran</span
+                    >
+                  </td>
+                  <td>
+                    <button class="btn btn-primary btn-sm">Detail</button>
+                  </td>
+                </tr>
+                <tr>
+                  <td>#FS2504212</td>
+                  <td>10 Mei 2025</td>
+                  <td>Budi Santoso</td>
+                  <td>Rp 350.000</td>
+                  <td><span class="status-badge processing">Diproses</span></td>
+                  <td>
+                    <button class="btn btn-primary btn-sm">Detail</button>
+                  </td>
+                </tr>
+                <tr>
+                  <td>#FS2504210</td>
+                  <td>9 Mei 2025</td>
+                  <td>Maya Wijaya</td>
+                  <td>Rp 125.000</td>
+                  <td><span class="status-badge shipped">Dikirim</span></td>
+                  <td>
+                    <button class="btn btn-primary btn-sm">Detail</button>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
           </div>
         </div>
       </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/adminPanel.js"></script>
+    <script src="js/admin.js"></script>
+    <script src="js/dashboard.js"></script>
   </body>
 </html>
