--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
         <p>Admin Dashboard</p>
       </div>
 
-      <form id="admin-login-form">
+      <form id="form-login-admin">
         <div class="mb-3">
-          <label for="admin-username" class="form-label">Username</label>
+          <label for="username-admin" class="form-label">Username</label>
           <div class="input-group">
             <span class="input-group-text"><i class="bi bi-person"></i></span>
             <input
               type="text"
               class="form-control"
-              id="admin-username"
+              id="username-admin"
               name="username"
               required
             />
@@ -37,13 +37,13 @@
         </div>
 
         <div class="mb-3">
-          <label for="admin-password" class="form-label">Password</label>
+          <label for="password-admin" class="form-label">Password</label>
           <div class="input-group">
             <span class="input-group-text"><i class="bi bi-lock"></i></span>
             <input
               type="password"
               class="form-control"
-              id="admin-password"
+              id="password-admin"
               name="password"
               required
             />
@@ -65,8 +65,6 @@
       </form>
     </div>
 
-    <script src="js/login.js"></script>
+    <script src="js/admin-login.js"></script>
   </body>
 </html>
-
-<script src="js/admin-login.js"></script>
