--- a/produk.html
+++ b/produk.html
@@ -13,7 +13,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="css/admin.css" />
-    <link rel="stylesheet" href="css/products-fixed.css" />
+    <link rel="stylesheet" href="css/produk-fixed.css " />
   </head>
   <body>
     <div class="admin-wrapper">
@@ -35,7 +35,7 @@
             </a>
           </li>
           <li class="sidebar-item">
-            <a href="products-fixed.html" class="sidebar-link active">
+            <a href="produk.html" class="sidebar-link active">
               <i class="bi bi-box-seam"></i>
               <span>Produk</span>
             </a>
@@ -47,7 +47,7 @@
             </a>
           </li>
           <li class="sidebar-item">
-            <a href="customers.html" class="sidebar-link">
+            <a href="pelanggan.html" class="sidebar-link">
               <i class="bi bi-people"></i>
               <span>Pelanggan</span>
             </a>
@@ -472,6 +472,6 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/admin.js"></script>
-    <script src="js/products-fixed.js"></script>
+    <script src="js/produk-fixed.js"></script>
   </body>
 </html>
