--- a/dashboard.html
+++ b/dashboard.html
@@ -35,7 +35,7 @@
             </a>
           </li>
           <li class="sidebar-item">
-            <a href="products.html" class="sidebar-link">
+            <a href="produk.html" class="sidebar-link">
               <i class="bi bi-box-seam"></i>
               <span>Produk</span>
             </a>
@@ -47,7 +47,7 @@
             </a>
           </li>
           <li class="sidebar-item">
-            <a href="customers.html" class="sidebar-link">
+            <a href="pelanggan.html" class="sidebar-link">
               <i class="bi bi-people"></i>
               <span>Pelanggan</span>
             </a>
