--- a/orders.html
+++ b/orders.html
@@ -34,7 +34,7 @@
             </a>
           </li>
           <li class="sidebar-item">
-            <a href="products.html" class="sidebar-link">
+            <a href="produk.html" class="sidebar-link">
               <i class="bi bi-box-seam"></i>
               <span>Produk</span>
             </a>
@@ -46,7 +46,7 @@
             </a>
           </li>
           <li class="sidebar-item">
-            <a href="customers.html" class="sidebar-link">
+            <a href="pelanggan.html" class="sidebar-link">
               <i class="bi bi-people"></i>
               <span>Pelanggan</span>
             </a>
