--- a/pelanggan.html
+++ b/pelanggan.html
@@ -53,7 +53,7 @@
             </a>
           </li>
           <li class="sidebar-item">
-            <a href="testimonials.html" class="sidebar-link">
+            <a href="testimoni.html" class="sidebar-link">
               <i class="bi bi-chat-left-text"></i>
               <span>Testimoni</span>
             </a>
